# MCUBoot-Compatible-Template

./: .gitmodules  CMakeLists.txt
config/: config_base.cmake
platform/: CMakeLists.txt
platform/include/: platform.h
platform/m2351/: CMakeLists.txt  platform.c
platform/m2354/: CMakeLists.txt  platform.c
platform/m261/: CMakeLists.txt  platform.c
platform/m261/scatter/: m261.sct
platform/m2l31/: CMakeLists.txt  platform.c
platform/m2l31/partition/: region_defs.h
platform/m3331/: CMakeLists.txt  platform.c
platform/m3331/partition/: region_defs.h
platform/m460/: CMakeLists.txt  platform.c
platform/m480/: CMakeLists.txt  platform.c
platform/m55m1/: CMakeLists.txt  platform.c
platform/m55m1/partition/: region_defs.h
platform/m55m1/scatter/: m55m1.sct
src/: CMakeLists.txt  main.c
toolchain/: scatter.cmake
